--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "smartwork_webapp",
-  "homepage": "https://smartbyhub.com/smart_time/api",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
