--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "0.27.2",
+    "leaflet": "^1.9.3",
     "material-ui-phone-number": "^3.0.0",
     "moment": "^2.29.4",
     "moment-jalaali": "^0.9.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
