--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "0.27.2",
+    "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.3",
+    "leaflet.locatecontrol": "^0.79.0",
     "material-ui-phone-number": "^3.0.0",
     "moment": "^2.29.4",
     "moment-jalaali": "^0.9.6",
