--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "smartwork_webapp",
+  "homepage":"https://smartbyhub.com/smart_time/api",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,7 @@
     "@mui/material": "^5.10.14",
     "@mui/styled-engine-sc": "^5.10.14",
     "@react-spring/web": "^9.6.1",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
