--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smartwork_webapp",
-  "homepage": "https://smartbyhub.com/smart_time/web",
+  "homepage": "https://smartwork.smartbyhub.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
