--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "0.27.2",
     "date-fns-jalali": "^2.30.0-0",
     "dayjs": "^1.11.9",
+    "firebase": "^10.5.0",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.3",
     "leaflet.locatecontrol": "^0.79.0",
