--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment-jalaali": "^0.9.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.14.1",
