--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "smartwork_webapp",
   "homepage": "https://web.smartworkapp.ir",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -16,6 +16,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "0.27.2",
+    "axios-retry": "^4.0.0",
+    "crypto-js": "^4.2.0",
     "date-fns-jalali": "^2.30.0-0",
     "dayjs": "^1.11.9",
     "firebase": "^10.5.0",
@@ -28,7 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-leaflet": "^4.2.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
