--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "smartwork_webapp",
   "homepage": "https://web.smartworkapp.ir",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-image-crop": "^11.0.5",
     "react-leaflet": "^4.2.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.14.1",
